fix: overflow issue

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -10,7 +10,6 @@
 	margin: 0 auto;
 	font-family: "Montserrat", sans-serif;
 	transform: scale(0.94);
-	overflow: scroll;
 
 	&__list {
 		list-style-type: none;
