--- a/src/sass/components/_skills.scss
+++ b/src/sass/components/_skills.scss
@@ -29,7 +29,6 @@
 
 	&__item {
 		border-radius: 1rem;
-		overflow: hidden;
 		transition: all 0.3s ease;
 
 		&:hover {
